--- a/public/index.html
+++ b/public/index.html
@@ -14,5 +14,5 @@
 <body>
     <div id="root"></div>
 </body>
-<script type="text/javascript" src="forecast_main.js"></script>
+<script type="text/javascript" src="../dist/forecast_main.js"></script>
 </html>
